이미지 최적화-webp로 변환, preload, loading="lazy" 추가

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link rel="preload" href="css/custom.reset.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="css/responsive.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <!-- Preload CSS files -->
+    <link rel="preload" href="img/메인배경.png" as="image">
     <!-- Custom CSS and JS -->
     <link rel="stylesheet" href="css/font.css" type="text/css" >
     <link rel="stylesheet" href="css/custom.reset.css" type="text/css" >
@@ -126,7 +128,7 @@
             ></iframe>
             <img
               class="thumbnail-1"
-              src="./img/광고-썸네일.jpg"
+              src="./img/광고-썸네일.webp"
               alt="thumbnail-1"
             >
             <img
@@ -678,14 +680,14 @@
                   class="mania"
                   data-aos="zoom-in-up"
                   data-aos-duration="800"
-                  src="./img/마니아.png"
+                  src="./img/마니아.webp"
                   alt="마니아 카드"
                 >
                 <img
                   class="millie-pick"
                   data-aos="zoom-in-up"
                   data-aos-duration="1300"
-                  src="./img/밀리픽.png"
+                  src="./img/밀리픽.webp"
                   alt="밀리픽 카드"
                 >
               </div>
@@ -694,14 +696,14 @@
                   class="holic"
                   data-aos="zoom-in-up"
                   data-aos-duration="500"
-                  src="./img/홀릭.png"
+                  src="./img/홀릭.webp"
                   alt="홀릭 카드"
                 >
                 <img
                   class="hidden"
                   data-aos="zoom-in-up"
                   data-aos-duration="1600"
-                  src="./img/히든.png"
+                  src="./img/히든.webp"
                   alt="히든 카드"
                 >
               </div>
@@ -851,13 +853,13 @@
                       <div class="smart-phone-inner">
                         <img
                           class="phone-image"
-                          src="./img/phone.png"
+                          src="./img/phone.webp"
                           alt="smartphone"
                         >
                         <div class="images-container">
                           <img
                             id="image1"
-                            src="./img/오디오북-1.png"
+                            src="./img/오디오북-1.webp"
                             alt="오디오북 1"
                           >
                           <video id="image2" autoplay loop muted>
@@ -865,12 +867,12 @@
                           </video>
                           <img
                             id="image3"
-                            src="./img/오디오북-3.png"
+                            src="./img/오디오북-3.webp"
                             alt="오디오북 3"
                           >
                           <img
                             id="image4"
-                            src="./img/오디오북-4.png"
+                            src="./img/오디오북-4.webp"
                             alt="오디오북 4"
                           >
                         </div>
@@ -914,7 +916,7 @@
                       <div class="smart-phone-inner">
                         <img
                           class="phone-image"
-                          src="./img/phone.png"
+                          src="./img/phone.webp"
                           alt="smartphone"
                         >
                         <div class="images-container">
@@ -960,7 +962,7 @@
                   ></iframe>
                   <img
                     class="thumbnail-2"
-                    src="./img/광고-썸네일2.png"
+                    src="./img/광고-썸네일2.webp"
                     alt="thumbnail-2"
                   >
                   <img
