js 중복 코드 간략화

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="preload" href="css/custom.reset.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="css/responsive.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <!-- Preload CSS files -->
+    <!-- Preload img -->
     <link rel="preload" href="img/메인배경.png" as="image">
     <!-- Custom CSS and JS -->
     <link rel="stylesheet" href="css/font.css" type="text/css" >
